Fix mobile nav alignment

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -36,6 +36,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding-bottom: 10rem;
     z-index: 1;
   }
